src/test/deca/context/invalid/ContextAvecObjet/New/newInt.deca
// Description:
//    Déclaration d'une clsse non définie
//
// Resultats:
//    Erreur contextuelle ligne 9
//    new déclare les classes uniquement

{
    int x = new int();
}